--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.5",
     "graphql": "^16.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
@@ -21,6 +23,8 @@
     "@graphql-codegen/typescript": "^2.4.4",
     "@graphql-codegen/typescript-operations": "^2.3.1",
     "@graphql-codegen/typescript-urql": "^3.5.2",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
     "autoprefixer": "^10.4.2",
